# mcp-manifold

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  rate_limits.json  server.py
.github/workflows/: ci.yml  docker.yml
tests/: conftest.py  test_manifold_server.py
