[project]
name = "mcp-manifold"
version = "0.1.0"
description = "MCP server for Manifold Markets - prediction market tools with backtesting"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "fastmcp>=2.13",
    "httpx>=0.27",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.setuptools]
py-modules = ["server", "app"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
