[project]
name = "mcp-manifold"
version = "0.1.0"
description = "MCP server for Manifold Markets - prediction market tools with backtesting"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "fastmcp>=2.13",
    "httpx>=0.27",
    "python-dotenv>=1.2.1",
    "manifold-sdk @ git+https://github.com/chestnutforty/sdk-manifold.git",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py", "rate_limiter.py", "app.py", "rate_limits.json"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
